[package]
name = "rust_helpers"
version = "0.1.0"
authors = ["august-k <august.kaplan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_helpers"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.3"

[dependencies.pyo3]
version = "0.13.2"
feature = ["extension-module"]
